# granular

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/granular/: __init__.py  cleanup.py  color.py  configuration.py  id_map.py  initialize.py  state.py  time.py
src/granular/migrate/: migrate.py  registry.py
src/granular/migrate/migrations/: migration_1_genesis.py  migration_2_rename_reports_to_custom_views.py  (+4 more)
src/granular/model/: context.py  custom_view.py  entity_id.py  entity_type.py  entry.py  event.py  filter.py  granularity_type.py  id_map.py  log.py  migrate.py  note.py  project.py  tag.py  task.py  terminal_dispatch.py  time_audit.py  timespan.py  tracker.py  view_dispatch.py
src/granular/query/: filter.py  filter_type.py  sort.py  util.py
src/granular/repository/: configuration.py  context.py  dispatch.py  entry.py  event.py  id_map.py  log.py  migrate.py  note.py  project.py  tag.py  task.py  time_audit.py  timespan.py  tracker.py
src/granular/service/: entry.py  heatmap.py  log.py  project.py  search.py  tag.py  tracker.py
src/granular/template/: context.py  entry.py  event.py  id_map.py  log.py  note.py  tag.py  task.py  time_audit.py  timespan.py  tracker.py
src/granular/terminal/: app.py  completion.py  configuration.py  context.py  custom_typer.py  custom_view.py  doc.py  event.py  log.py  note.py  parse.py  search.py  task.py  time_audit.py  timespan.py  tracker.py  validate.py  version.py  view.py
src/granular/version/: git.py  version.py
src/granular/view/: state.py  terminal_dispatch.py
(+21 files in other folders)
